--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -17,6 +17,8 @@ $card-bg: rgba(0, 0, 0, 0.45);
 $border-radius: 8px;
 $page-bg: #2b222a;
 
+
+
 // Base styles
 html {
   font-size: 16px;
@@ -46,9 +48,18 @@ body {
   margin: 0px auto;
   width: 100%;
   max-width: 100vw;
+
   letter-spacing: 0rem;
   overflow-x: hidden; /* Hide horizontal overflow */
   box-sizing: border-box; /* Include padding in width calculation */
+}
+
+//
+html, body {
+  // Prevent viewport height changes from affecting layout
+  //height: 100%;
+  overflow-x: hidden;
+
 }
 
 // Typography
@@ -206,13 +217,14 @@ a {
   /* Optional: adjust vertical position */
   top: 0;
   max-width: none;     /* IMPORTANT: Prevents the image from resizing to fit container */
-  //height: 100%;
+
   //width: auto;
   //
   /* Set minimum width to ensure coverage on large screens */
   min-width: 100vw; /* Always fill viewport width */
   height: auto; /* Let height adjust based on aspect ratio */
-  min-height: 100%; /* Make sure it fills the container height */  /* broken on android */
+  min-height: 100vh; /* Make sure it fills the container height */  /* broken on android */
+
 
   /* Position from the top for better framing */
   top: 0;
@@ -415,8 +427,8 @@ $debug-colors: (
 
 
 .banner-container {
-  position: absolute;
-  top: 85%;
+  //position: absolute;
+  //top: 85%;
   margin: 0px;
   padding: 0px;
   //width: 100px; /* Container width */
@@ -578,7 +590,7 @@ $debug-colors: (
     border-radius: $border-radius $border-radius 0 0;
     display: block;
     height: auto;
-    aspect-ratio: 1920/1080;
+    //aspect-ratio: 1920/1080;
     //@media (max-width: 768px) {
     //  height: 300px;
     //}
@@ -596,17 +608,6 @@ $debug-colors: (
     background: color.adjust($card-bg, $alpha: 0);
   }
 }
-
-.artwork-image-large {
-  object-fit: contain;
-  image-rendering: pixelated;
-  image-rendering: -moz-crisp-edges;
-  image-rendering: crisp-edges;
-
-  max-width: 100%;
-  border-radius: $border-radius $border-radius 0 0;
-}
-
 
 .artwork-info {
   position: relative;
